[package]
name = "futures-tls"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/futures-rs"
homepage = "https://github.com/alexcrichton/futures-rs"
documentation = "http://alexcrichton.com/futures-rs/futures_tls/"
description = """
An implementation of TLS/SSL streams on top of the `futures_io` crate giving an
implementation of TLS for nonblocking I/O streams.
"""

[dependencies]
cfg-if = "0.1"
futures = { path = "..", version = "0.1.0" }
futures-io = { path = "../futures-io", version = "0.1.0" }
log = "0.3"

# Optional dependency that can be enabled with the `force-openssl` feature
openssl = { version = "0.7", optional = true }
openssl-verify = { version = "0.1", optional = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl = "0.7"
openssl-verify = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "0.1"

[target.'cfg(windows)'.dependencies]
schannel = { git = "https://github.com/alexcrichton/schannel-rs", branch = "fixups" }

[target.'cfg(windows)'.dev-dependencies]
winapi = "0.2"

[dev-dependencies]
futures-mio = { path = "../futures-mio", version = "0.1.0" }
env_logger = "0.3"

[features]
force-openssl = ["openssl", "openssl-verify"]
