[package]
name = "futures-util-preview"
edition = "2018"
version = "0.3.0-alpha.19"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://rust-lang-nursery.github.io/futures-rs"
documentation = "https://docs.rs/futures-util-preview/0.3.0-alpha.19"
description = """
Common utilities and extension traits for the futures-rs library.
"""

[lib]
name = "futures_util"

[features]
default = ["std"]
std = ["alloc", "futures-core-preview/std", "slab"]
alloc = ["futures-core-preview/alloc"]
async-await = []
compat = ["std", "futures_01"]
io-compat = ["io", "compat", "tokio-io"]
sink = ["futures-sink-preview"]
io = ["std", "futures-io-preview", "memchr"]
channel = ["std", "futures-channel-preview"]
join-macro = ["async-await", "futures-join-macro-preview", "proc-macro-hack", "proc-macro-nested"]
select-macro = ["async-await", "futures-select-macro-preview", "proc-macro-hack", "proc-macro-nested"]

# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = ["futures-core-preview/unstable"]
cfg-target-has-atomic = ["futures-core-preview/cfg-target-has-atomic"]
bilock = []
read_initializer = ["io", "futures-io-preview/read_initializer", "futures-io-preview/unstable"]

[dependencies]
futures-core-preview = { path = "../futures-core", version = "=0.3.0-alpha.19", default-features = false }
futures-channel-preview = { path = "../futures-channel", version = "=0.3.0-alpha.19", default-features = false, features = ["std"], optional = true }
futures-io-preview = { path = "../futures-io", version = "=0.3.0-alpha.19", default-features = false, features = ["std"], optional = true }
futures-sink-preview = { path = "../futures-sink", version = "=0.3.0-alpha.19", default-features = false, optional = true }
futures-join-macro-preview = { path = "../futures-join-macro", version = "=0.3.0-alpha.19", default-features = false, optional = true }
futures-select-macro-preview = { path = "../futures-select-macro", version = "=0.3.0-alpha.19", default-features = false, optional = true }
proc-macro-hack = { version = "0.5.9", optional = true }
proc-macro-nested = { version = "0.1.2", optional = true }
slab = { version = "0.4", optional = true }
memchr = { version = "2.2", optional = true }
futures_01 = { version = "0.1.25", optional = true, package = "futures" }
tokio-io = { version = "0.1.9", optional = true }
pin-utils = "0.1.0-alpha.4"

[dev-dependencies]
futures-preview = { path = "../futures", version = "=0.3.0-alpha.19", features = ["async-await"] }
futures-test-preview = { path = "../futures-test", version = "=0.3.0-alpha.19" }
tokio = "0.1.11"

[package.metadata.docs.rs]
all-features = true
