[package]
name = "futures"
edition = "2018"
version = "0.3.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["futures", "async", "future"]
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures/0.3.5"
description = """
An implementation of futures and streams featuring zero allocations,
composability, and iterator-like interfaces.
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "rust-lang/futures-rs" }

[dependencies]
futures-core = { path = "../futures-core", version = "0.3.5", default-features = false }
futures-task = { path = "../futures-task", version = "0.3.5", default-features = false }
futures-channel = { path = "../futures-channel", version = "0.3.5", default-features = false, features = ["sink"] }
futures-executor = { path = "../futures-executor", version = "0.3.5", default-features = false, optional = true }
futures-io = { path = "../futures-io", version = "0.3.5", default-features = false }
futures-sink = { path = "../futures-sink", version = "0.3.5", default-features = false }
futures-util = { path = "../futures-util", version = "0.3.5", default-features = false, features = ["sink"] }

[dev-dependencies]
pin-utils = "0.1.0"
futures-executor = { path = "../futures-executor", version = "0.3.5", features = ["thread-pool"] }
futures-test = { path = "../futures-test", version = "0.3.5" }
tokio = "0.1.11"
assert_matches = "1.3.0"

[features]
default = ["std", "async-await", "executor"]
std = ["alloc", "futures-core/std", "futures-task/std", "futures-io/std", "futures-sink/std", "futures-util/std", "futures-util/io", "futures-util/channel"]
alloc = ["futures-core/alloc", "futures-task/alloc", "futures-sink/alloc", "futures-channel/alloc", "futures-util/alloc"]
async-await = ["futures-util/async-await", "futures-util/async-await-macro"]
compat = ["std", "futures-util/compat"]
io-compat = ["compat", "futures-util/io-compat"]
executor = ["std", "futures-executor/std"]
thread-pool = ["executor", "futures-executor/thread-pool"]

# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = ["futures-core/unstable", "futures-task/unstable", "futures-channel/unstable", "futures-io/unstable", "futures-util/unstable"]
cfg-target-has-atomic = ["futures-core/cfg-target-has-atomic", "futures-task/cfg-target-has-atomic", "futures-channel/cfg-target-has-atomic", "futures-util/cfg-target-has-atomic"]
bilock = ["futures-util/bilock"]
read-initializer = ["futures-io/read-initializer", "futures-util/read-initializer"]
write-all-vectored = ["futures-util/write-all-vectored"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["std", "async-await", "compat", "io-compat", "executor", "thread-pool"]
