[package]
name = "futures01"
version = "0.1.29"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://github.com/rust-lang-nursery/futures-rs"
documentation = "https://docs.rs/futures"
description = """
An implementation of futures and streams featuring zero allocations,
composability, and iterator-like interfaces.

Note that this crate tracks permanently to the 0.1 branch of
the `futures` crate.
"""

[dependencies.futures]
path = ".."
version = "0.1.29"
default-features = false

[features]
default = ["use_std", "with-deprecated"]
nightly = ["futures/nightly"]
use_std = ["futures/use_std"]
with-deprecated = ["futures/with-deprecated"]
