[package]
name = "http"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
futuremio = { path = "../mio" }
futures = { path = ".." }
httparse = "1.1"
time = "0.1"
env_logger = "0.3"
log = "0.3"

[profile.release]
debug = true

[replace]
"time:0.1.35" = { git = "https://github.com/rust-lang-deprecated/time" }
