[package]
name = "http"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
futuremio = { path = "../mio" }
futures = { path = ".." }
ssl = { path = "../ssl" }
openssl = "0.7"
httparse = "1.1"
time = "0.1"
env_logger = "0.3"
log = "0.3"
net2 = "0.2"

[profile.release]
debug = true
